# ChangeLog for dev-java/jdbc-mysql
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-mysql/ChangeLog,v 1.44 2007/05/18 09:16:26 betelgeuse Exp $

*jdbc-mysql-5.0.6 (18 May 2007)

  18 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +jdbc-mysql-5.0.6.ebuild:
  Version bump.

  09 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  jdbc-mysql-5.0.5.ebuild:
  Add missing DEPEND on dev-java/ant-contrib. Fixes bug #177814.

*jdbc-mysql-5.0.5 (07 May 2007)

  07 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/5.0.5-dist-target-depends.patch,
  +files/5.0.5-remove-jboss-dependency-from-tests.patch,
  +jdbc-mysql-5.0.5.ebuild:
  Version bump. Make log4j support optional via the log4j use flag. Fixes bug
  #156765. Thanks to Johan Bergström <bugs@bergstroem.nu>.

*jdbc-mysql-3.1.13-r5 (06 May 2007)

  06 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +jdbc-mysql-3.1.13-r5.ebuild:
  Drop jdbc2-stdext dependency because it's only needed with virtual/jdk-1.3
  which we don't support any more.

  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  jdbc-mysql-3.1.13-r4.ebuild:
  ppc stable

  26 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  jdbc-mysql-3.1.13-r4.ebuild:
  stable x86, bug 175993

  25 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
  jdbc-mysql-3.1.13-r4.ebuild:
  Junit is not needed because we are not building the testcases and general
  ebuild cleanup.

  18 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
  -jdbc-mysql-3.1.12.ebuild, -jdbc-mysql-3.1.13-r1.ebuild,
  -jdbc-mysql-3.1.13-r2.ebuild, -jdbc-mysql-3.1.13-r3.ebuild:
  Removed old versions/revisions.

  11 Jan 2007; Markus Rothe <corsair@gentoo.org>
  jdbc-mysql-3.1.13-r4.ebuild:
  Stable on ppc64

*jdbc-mysql-3.1.13-r4 (04 Oct 2006)

  04 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  +files/do-not-filter-png.diff, +files/no-testsuite.diff,
  +jdbc-mysql-3.1.13-r4.ebuild:
  Merged changes with gcj-overlay, bug #145765.
