@@ -37,18 +37,18 @@ EBUILD jdbc-mysql-3.1.13-r5.ebuild 1575 RMD160 b63a2348f01d698dc322f788ff0df839c
 MD5 fb0f803b67a1874b89ee39c972a1d7f6 jdbc-mysql-3.1.13-r5.ebuild 1575
 RMD160 b63a2348f01d698dc322f788ff0df839c1ad9f70 jdbc-mysql-3.1.13-r5.ebuild 1575
 SHA256 284101edc52503f9b7265956188304449bff7b2c57067681af7eefd6dcdbfb60 jdbc-mysql-3.1.13-r5.ebuild 1575
-EBUILD jdbc-mysql-5.0.5.ebuild 1856 RMD160 0052fa30100656382cf6d68e658b9a72d22acb13 SHA1 5e785b44a6dff0cb153bfe84f357f33622f469bf SHA256 9be7f82f6758908a39176ffe196d6dc8a0744c719c94a33e2cca3e2f926fda29
-MD5 979ae13d53e42b0f17555b9f67417ceb jdbc-mysql-5.0.5.ebuild 1856
-RMD160 0052fa30100656382cf6d68e658b9a72d22acb13 jdbc-mysql-5.0.5.ebuild 1856
-SHA256 9be7f82f6758908a39176ffe196d6dc8a0744c719c94a33e2cca3e2f926fda29 jdbc-mysql-5.0.5.ebuild 1856
-EBUILD jdbc-mysql-5.0.6.ebuild 1883 RMD160 3f22efa49c410b7f99be815461f76d3a68d5c3cc SHA1 e5776d08f7d762f475e69c833f8a84d4b5e66771 SHA256 9b166153df0f0e3dba28b380fe2fde7b153ec6bd92cb03f897d5300806702ee7
-MD5 8e12ed4f821b00b643d12c66ad906c01 jdbc-mysql-5.0.6.ebuild 1883
-RMD160 3f22efa49c410b7f99be815461f76d3a68d5c3cc jdbc-mysql-5.0.6.ebuild 1883
-SHA256 9b166153df0f0e3dba28b380fe2fde7b153ec6bd92cb03f897d5300806702ee7 jdbc-mysql-5.0.6.ebuild 1883
-MISC ChangeLog 9748 RMD160 68e64b6687725bf015e5c1a9f4ced4afbde0ac23 SHA1 876cba19356da1a5ea0c6247286536f0a58919ef SHA256 22e5d747372e8cf10430f6a0bda5723214221dc8e2f81384dbe3f51ab422764f
-MD5 4b0a79651369ad274acf0dbe81e0fad0 ChangeLog 9748
-RMD160 68e64b6687725bf015e5c1a9f4ced4afbde0ac23 ChangeLog 9748
-SHA256 22e5d747372e8cf10430f6a0bda5723214221dc8e2f81384dbe3f51ab422764f ChangeLog 9748
+EBUILD jdbc-mysql-5.0.5.ebuild 1849 RMD160 6ef9ef10f2d06f966f0475e72f99fa891af3c4b2 SHA1 9bf912f34fd6837374477a6d392d52b2489c3c95 SHA256 05f6924011b3d2c85d22448d62d50d4447f4bf962aa458bfbe2acfeb1f48b00e
+MD5 f2b337c1e43223a833d9ae3bd691aef0 jdbc-mysql-5.0.5.ebuild 1849
+RMD160 6ef9ef10f2d06f966f0475e72f99fa891af3c4b2 jdbc-mysql-5.0.5.ebuild 1849
+SHA256 05f6924011b3d2c85d22448d62d50d4447f4bf962aa458bfbe2acfeb1f48b00e jdbc-mysql-5.0.5.ebuild 1849
+EBUILD jdbc-mysql-5.0.6.ebuild 1876 RMD160 9ba4ffc665576589952b5f21e625c44252f94f0b SHA1 065bfad69bae767dc152b4c0a831d348d028589d SHA256 50797ea6c468c281766ac9a1992760a69a3b0e76d4caa5d3136827a088fb8265
+MD5 782a6c9e6f976f3838b49380aa6653f5 jdbc-mysql-5.0.6.ebuild 1876
+RMD160 9ba4ffc665576589952b5f21e625c44252f94f0b jdbc-mysql-5.0.6.ebuild 1876
+SHA256 50797ea6c468c281766ac9a1992760a69a3b0e76d4caa5d3136827a088fb8265 jdbc-mysql-5.0.6.ebuild 1876
+MISC ChangeLog 10016 RMD160 13ca988433bcfea9bb172ca28924c2a07fbafbf4 SHA1 3aad845758dc3f6380687dc51d4eaf7f87f36d5d SHA256 18645e47dca309479bf6d09443a161416e31c643e5915a3890b5010bfb14c6d4
+MD5 5d061732081b58e7c8e5bc52f4511dbf ChangeLog 10016
+RMD160 13ca988433bcfea9bb172ca28924c2a07fbafbf4 ChangeLog 10016
+SHA256 18645e47dca309479bf6d09443a161416e31c643e5915a3890b5010bfb14c6d4 ChangeLog 10016
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
@@ -69,9 +69,9 @@ MD5 d2ff5b12e0e51eab4f41ae0a09b46d62 files/digest-jdbc-mysql-5.0.6 283
 RMD160 21f105efc5963b17a07c36ab0a8298eba1e756bc files/digest-jdbc-mysql-5.0.6 283
 SHA256 03e0d5790732169f67d565df1beeff7d8d1353a2e7b2ce261754999b610c5c38 files/digest-jdbc-mysql-5.0.6 283
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.3 (GNU/Linux)
+Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFGTW7zcxLzpIGCsLQRAgagAJ9CDIUEYz7wsnDxnfS2LqMeSyZhCwCfckmV
-Pr7anOSgP9sNzis+djGHXxc=
-=WFfA
+iD8DBQFGXuozcxLzpIGCsLQRAr1GAJ9Q2Ohomy1Dej4u2yryzcM9lhJ+ygCfdHPs
+IrTtoULRbaSsL2aMbNEHgno=
+=KPMZ
 -----END PGP SIGNATURE-----
